<resources>
    <string name="app_name">BlueHome</string>
    <string name="dashboard">Dashboard</string>
    <string name="dashboard_menu_1">Rules</string>
    <string name="dashboard_menu_2">Devicelist</string>
    <string name="dashboard_menu_3">Settings</string>
    <string name="dashboard_menu_4">Menu 4</string>
    <string name="dashboard_menu_5">Menu 5</string>
    <string name="no_entries">No entries available</string>
    <string name="add_new_device">Add New Device</string>
    <string name="device_shown_name">Shown Name</string>
    <string name="device_real_name">Physical Name</string>
    <string name="device_mac_address">MAC Address</string>
    <string name="edit_device">Edit Device</string>
    <string name="apply_changes">Apply Changes</string>
    <string name="import_string">Import</string>
    <string name="export_string">Export</string>
    <string name="settings">Settings</string>
    <string name="select_directory">Select</string>
    <string name="choose_directory">Choose Directory</string>
    <string name="path">Path</string>
    <string name="select">Select</string>
    <string name="acces_bluetooth_title">This app need permission to use Bluetooth</string>
    <string name="acces_bluetooth_text">Please grant Bluetooth permission, so this app can communicate with BlueHome Devices.</string>
    <string name="acces_location_title">This app need permission to use Location</string>
    <string name="acces_location_text">Please grant Location Access Permission, so this app can communicate with BlueHome Devices.</string>
    <string name="acces_storage_title">This app need permission to write to storage</string>
    <string name="acces_storage_text">Please grant storage write access so this app can write configuration Files.</string>
    <string name="ble_not_supported">BLE is not Supported on this Device</string>
    <string name="find_new_device">Find new Device</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add_device_question">Add Device?</string>
    <string name="like_to_add_question_1">Would you like to add the Device with the MAC Address</string>
    <string name="like_to_add_question_2">to your System?</string>
    <string name="name_device">Name Device</string>
    <string name="give_device_name">Give your new Device a Name:</string>
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="type">Type</string>
    <string name="error_not_available">Device not reachable</string>
    <string name="rules">Rules</string>
    <string name="devices">Devices</string>
    <string name="create_ruleset">Create Ruleset</string>
    <string name="source_device">Source Device</string>
    <string name="target_device">Target Device</string>
    <string name="initiator">Initiator</string>
    <string name="actor">Actor</string>
    <string name="initiator_action">Initiator Action</string>
    <string name="actor_action">Actor Action</string>
    <string name="pressed">pressed</string>
    <string name="released">released</string>
    <string name="left_turn">left turn</string>
    <string name="right_turn">right turn</string>
    <string name="dimm_up">dimm up</string>
    <string name="dimm_down">dimm down</string>
    <string name="switch_on">switch on</string>
    <string name="switch_off">switch off</string>
    <string name="please_choose">please choose</string>
    <string name="toggle">toggle</string>
    <string name="no_devs">no Devices</string>
    <string name="initiator_input_1">Input 1</string>
    <string name="initiator_input_2">Input 2</string>
    <string name="initiator_input_3">Input 3</string>
    <string name="initiator_input_4">Input 4</string>
    <string name="initiator_input_5">Input 5</string>
    <string name="initiator_input_6">Input 6</string>
    <string name="initiator_input_7">Input 7</string>
    <string name="initiator_input_8">Input 8</string>
    <string name="initiator_current_sens">Current Sensor</string>
    <string name="initiator_temp_Sens">Temperature Sensor</string>
    <string name="initiator_button_1">Button 1</string>
    <string name="initiator_button_2">Button 2</string>
    <string name="initiator_button_3">Button 3</string>
    <string name="initiator_button_4">Button 4</string>
    <string name="initiator_wheel">Wheel</string>
    <string name="initiator_humidity">Humidity Sensor</string>
    <string name="initiator_light">Light Sensor</string>
    <string name="initiator_microfone">Microfone</string>
    <string name="manual_add_device">Manually add Device</string>
    <string name="relay_1">Relay 1</string>
    <string name="relay_2">Relay 2</string>
    <string name="relay_3">Relay 3</string>
    <string name="relay_4">Relay 4</string>
    <string name="pwm_1">Analog Out 1</string>
    <string name="pwm_2">Analog Out 2</string>
    <string name="pwm_3">Analog Out 3</string>
    <string name="pwm_4">Analog Out 4</string>
    <string name="buzzer">Buzzer</string>
    <string name="display">Display</string>
    <string name="output_1">Digital Output 1</string>
    <string name="output_2">Digital Output 2</string>
    <string name="output_3">Digital Output 3</string>
    <string name="output_4">Digital Output 4</string>
    <string name="output_5">Digital Output 5</string>
    <string name="output_6">Digital Output 6</string>
    <string name="output_7">Digital Output 7</string>
    <string name="output_8">Digital Output 8</string>
    <string name="falling_edge">falling edge</string>
    <string name="rising_edge">rising edge</string>
    <string name="comp_lbl_gpo">Output Number</string>
    <string name="comp_lbl_gpi">Input Number</string>
    <string name="gpio">GPIO</string>
    <string name="start">start</string>
    <string name="stop">stop</string>
    <string name="short_beep">short beep</string>
    <string name="tone_height">tone height</string>
    <string name="bluetooth">bluetooth</string>
    <string name="bluetooth_send">send</string>
    <string name="bluetooth_publish">publisch</string>
    <string name="touch_button">Touch Button</string>
    <string name="touch_button_action_click">Clicked</string>
    <string name="touch_button_action_long_click">long Clicked</string>
    <string name="touch_button_action_pressed">Pressed</string>
    <string name="touch_button_action_released">Released</string>
    <string name="button_number">Button Number</string>
    <string name="relais">Relay</string>
    <string name="relay_number">Relay number</string>
    <string name="create_rule">Create Rule</string>
    <string name="ruleset_name">Ruleset Name</string>
    <string name="threshold_value">Threshold Value</string>
    <string name="rule_info">Rule Details</string>
    <string name="rule_info_text_1">Rule \"</string>
    <string name="rule_info_text_2">\" has following Details:</string>
    <string name="newRuleSetName">1/5\nPlease name your new ruleset</string>
    <string name="rulesetName">Name of ruleset</string>
    <string name="newRuleSet">NewRuleSet</string>
    <string name="nextAction">continue</string>
    <string name="newRuleSetDevices">2/5\nChose the source and target device that should be used for the new ruleset</string>
    <string name="sourceDevice">source device</string>
    <string name="destinationDevice">destination device</string>
    <string name="newRuleSetInitiatorActor">3/5\nChose the initiator of the the source device that will trigger the event and the actor of the target device that will react to this event</string>
    <string name="wrongDevice">The chosen devices are not correct. Please check if both, the source and the target device are valid devices!</string>
    <string name="newRuleSetInitiatorAction">4/5\nChose the action of the initiator and the comparism of it that triggers the event</string>
    <string name="newRuleSetActorAction">5/5\nChose the action of the actor and the value/intensity of the action</string>
    <string name="finish">Finish</string>
    <string name="newRuleSetNotWithinBorders">The given parameter to compare with is not within the allowed range of the device</string>
    <string name="dialog_delete_device_message">"Are you sure you want to delete the Device "</string>
    <string name="dialog_delete_device_title">Delete Device?</string>
    <string name="dialog_delete_device_pos_button">delete</string>
    <string name="dialog_delete_device_neg_button">back</string>
    <string name="dialog_delete_device_message_pt2">" and all related rules?"</string>
    <string name="dialog_delete_device_message_multiple">Are you sure you want to delete the following Devices and al related Rules?</string>
</resources>
