<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@color/colorPrimaryDark"
        android:gravity="bottom"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/dashboard_menu_button"
            android:drawableTop="@drawable/dashboard_menu_button_1"
            android:onClick="menu1_pressed"
            android:padding="5dp"
            android:text="@string/dashboard_menu_1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/dashboard_menu_button"
            android:drawableTop="@drawable/dashboard_menu_button_2"
            android:onClick="menu2_pressed"
            android:padding="5dp"
            android:text="@string/dashboard_menu_2" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/dashboard_menu_button"
            android:drawableTop="@drawable/dashboard_menu_button_3"
            android:onClick="menu3_pressed"
            android:padding="5dp"
            android:text="@string/dashboard_menu_3" />


    </LinearLayout>

</android.support.constraint.ConstraintLayout>