<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManAddDev">

    <EditText
        android:id="@+id/add_device_shown_name"
        android:layout_width="0dp"
        android:layout_height="39dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/add_device_lable_shown_name"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/colorAccent"/>

    <EditText
        android:id="@+id/add_device_real_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/add_device_label_real_name"
        app:layout_constraintTop_toBottomOf="@+id/add_device_shown_name"
        android:textColor="@color/colorAccent"/>

    <TextView
        android:id="@+id/add_device_lable_shown_name"
        android:layout_width="80dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:text="@string/device_shown_name"
        app:layout_constraintBottom_toBottomOf="@+id/add_device_shown_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/add_device_shown_name" />

    <TextView
        android:id="@+id/add_device_label_real_name"
        android:layout_width="80dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:text="@string/device_real_name"
        app:layout_constraintBottom_toBottomOf="@+id/add_device_real_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/add_device_real_name" />

    <EditText
        android:id="@+id/add_device_mac"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/add_device_real_name"
        android:textColor="@color/colorAccent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="80dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:text="@string/device_mac_address"
        app:layout_constraintBottom_toBottomOf="@+id/add_device_mac"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/add_device_mac" />

    <Button
        android:id="@+id/add_device_add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="Add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <CheckBox
        android:id="@+id/add_device_devimg_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="BlueHome Device"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_device_mac"
        android:theme="@style/CheckBox"/>

</android.support.constraint.ConstraintLayout>